@@ -5,6 +5,8 @@ Revision history for Perl extension PPI
 	- Now supports the 5.10 "state" keyword.  As far as PPI is concerned,
 	  it's a synonym for "my".
 	- Now supports the smart match operator (~~).
+	- Now supports keeping track of line numbers as affected by the #line
+	  directive.
 	- Statement::Include::module_version() implemented.
 	- Token::QuoteLike::Words::literal() implemented.
 	- Token::Quote::Double::simplify() fixed.
